# metnos

./: .gitattributes  .gitignore  EXECUTOR_STANDARD.md  README.md  requirements-optional.txt  requirements.txt
bench/: routing_baseline.json  routing_subset_bench.py
client-rs/: Cargo.toml  README.md
client-rs/.cargo/: config.toml
client-rs/install/: install.ps1.in  install.sh.in
client-rs/src/: appcontainer.rs  config.rs  executors.rs  identity.rs  main.rs  pairing.rs  proclock.rs  pyenv.rs  runner.rs  sandbox_common.rs  sandbox_linux.rs  sandbox_windows.rs  selfupdate.rs  state.rs  update_state.rs  wire.rs
executors/act_sites/: act_sites.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/change_files_format/: change_files_format.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/compress_files/: compress_files.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/compute_entries/: compute_entries.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/compute_files_loc/: compute_files_loc.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/compute_signatures/: compute_signatures.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/consult_frontier/: consult_frontier.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/create_calendars/: create_calendars.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/create_dirs/: create_dirs.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/create_events/: create_events.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/create_files_doc/: create_files_doc.py  manifest.lang_state.json  manifest.toml  manifest.toml.sig
executors/create_files_spreadsheet/: manifest.toml  (+3 more)
install/: INSTALL.md  INSTALL_NOTES.md  README.md  __init__.py  __main__.py  bootstrap.sh  disclaimer.py  download_models.sh  downloads.py  i18n.py  llm_manager.py  manifest.toml  playwright_sidecar.py  preflight.py  service_control_policy.py  setup.sh  sidecar.py  state.py  ui.py
runtime/: __version__.py  active_sessions.py  actor_resolver.py  adaptive_rerank.py  admin_chat_commands.py  affinity_semantic.py  agent_mirror.py  agent_runtime.py  agent_server.py  agentic_executor.py  alignment_engine.py  approval_registry.py  arg_provenance.py  args_defaults.py  args_extractor.py  args_resolver.py  asset_discovery.py  audit_jsonl.py  audit_quality_en.json  auto_remediation.py  backend_resolver.py  build_orchestrator.py  build_runner.py  build_runner_unified.py  calendar_resolver.py  calibration_check.py  canonical_matcher.py  capabilities.py  change_applier.py  change_applier_extend.py  change_intents.py  change_intents_i18n.py  change_observer.py  change_rollback.py  chat_target_store.py  cifs_helper.py  classify_entries.py  clip_embedding.py  compare_entries.py  compound_decomposer.py  (+192 more)
scripts/: add_prompt_frontmatter.py  build-client.sh  build_prefilter_corpus.py  c7-validate-files-remote.sh  c7-validate-list-dirs.sh  c7-validate-mutants-remote.sh  c7-validate-selfupdate.sh  check-mail.sh  client_signing.py  e2e-remote-executor.sh  e2e-shim-selfheal.sh  gen_architecture_flow.py  generate_executor_catalog.py  install_git_hooks.sh  metnos-cli  metnos-skills.sh  nightly_docs_language.sh  nightly_fable_audit.sh  normalize_installed_github_executors.py  post-rename-verify.sh  pre-commit-prompts.sh  pre-commit-symmetry-it-en.sh  reddit_cred_form.py  reddit_post_page.py  repro_prefilter_bench.py  send-mail.sh  vlm_server.sh
systemd/: README.md  metnos-playwright.service  metnos-side-display.service  metnos-telegram-daemon.service
(+843 files in other folders)
