[package]
name = "metnos-client"
version = "0.1.0"
edition = "2021"
description = "Metnos remote executor client (Rust)"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
